# linguamesh-linux

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GLOBAL_GOAL.md  IMPLEMENTATION_STATUS.md  PRIVACY.md  README.md  REPOSITORY_ROLE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml
.github/workflows/: flatpak.yml  foundation.yml  native.yml
docs/: architecture.md  releasing.md  testing.md
l10n/: compatibility.json  manifest.json
l10n/linux/ar-XB/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/ar/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/de/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/en-XA/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/en/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/es/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/fr/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/hi/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/ja/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/ko/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/pt-BR/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/ru/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/zh-Hans/LC_MESSAGES/: linguamesh.mo  linguamesh.po
l10n/linux/zh-Hant/LC_MESSAGES/: linguamesh.mo  linguamesh.po
packaging/flatpak/: README.md  cargo-config.toml  cargo-sources.json  dev.linguamesh.LinguaMesh.desktop  dev.linguamesh.LinguaMesh.metainfo.xml  dev.linguamesh.LinguaMesh.yml
src/: file_import.rs  lib.rs  localization.rs  main.rs  model.rs  ocr.rs  secret_service.rs  worker.rs
tools/: check-localization-keys.py  check-localization-placeholders.py  check-visible-localization.py  client-certificate-http-fixture.py  create-flatpak-evidence.py  create-native-evidence.py  document-portal-test.py  file-chooser-portal-test.py  gtk-atspi-inspect.py  notification-service.py  orca-atspi-inspect.py  run-client-certificate-interop-test.sh  run-document-portal-test.sh  run-file-chooser-portal-test.sh  run-flatpak-smoke.sh  run-gtk-accessibility-preferences-test.sh  run-gtk-atspi-test.sh  run-gtk-drag-and-drop-test.sh  run-gtk-file-chooser-portal-test.sh  run-gtk-keyboard-focus-test.sh  run-notification-daemon-test.sh  run-notification-test.sh  run-ocr-test.sh  run-ollama-interop-test.sh  run-orca-atspi-test.sh  run-performance-baseline.sh  run-secret-service-prompt-test.sh  run-secret-service-test.sh  run-storage-fault-test.sh  run-wayland-test.sh  secret-service-prompt-fixture.py  sync-l10n.sh  validate-flatpak-metadata.sh
