[package]
name = "linguamesh-linux"
version = "0.1.0-alpha.2"
edition = "2024"
rust-version = "1.93"
license = "MIT"
description = "Native GTK 4 client for LinguaMesh"

[features]
default = []
demo-provider = [
    "dep:linguamesh-application",
    "dep:linguamesh-engine",
    "dep:linguamesh-storage",
    "dep:linguamesh-testkit",
    "dep:tokio",
    "dep:tokio-util",
]
gui = ["demo-provider", "dep:adw", "dep:gtk"]

[dependencies]
adw = { package = "libadwaita", version = "0.9.2", features = ["v1_4"], optional = true }
gtk = { package = "gtk4", version = "0.11.4", features = ["v4_10"], optional = true }
linguamesh-application = { version = "=0.1.0-alpha.2", path = "../linguamesh-core/crates/linguamesh-application", optional = true }
linguamesh-domain = { version = "=0.1.0-alpha.2", path = "../linguamesh-core/crates/linguamesh-domain" }
linguamesh-engine = { version = "=0.1.0-alpha.2", path = "../linguamesh-core/crates/linguamesh-engine", optional = true }
linguamesh-protocol = { version = "=0.1.0-alpha.2", path = "../linguamesh-core/crates/linguamesh-protocol" }
linguamesh-storage = { version = "=0.1.0-alpha.2", path = "../linguamesh-core/crates/linguamesh-storage", optional = true }
linguamesh-testkit = { version = "=0.1.0-alpha.2", path = "../linguamesh-core/crates/linguamesh-testkit", optional = true }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "sync", "time"], optional = true }
tokio-util = { version = "0.7.15", features = ["rt"], optional = true }

[[bin]]
name = "linguamesh-linux"
path = "src/main.rs"
required-features = ["gui"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
